<resources>
  <string name="app_name">Yum Byte</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="next">Next</string>
  <string name="search">Search</string>
  <string name="txt_wip">Work in progress</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi cras fermentum odio eu feugiat pretium nibh. Pretium viverra suspendisse potenti nullam. Amet tellus cras adipiscing enim eu turpis. Malesuada fames ac turpis egestas maecenas pharetra convallis. Est velit egestas dui id ornare arcu odio ut sem. Facilisis gravida neque convallis a cras semper auctor neque.</string>
  <string name="long_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec vehicula ex. Vivamus vestibulum dui sit amet posuere commodo. Nulla sit amet molestie dui. Nunc dictum, leo a accumsan pretium, leo metus sagittis libero, eu rutrum ligula erat ac urna. Pellentesque ac egestas nisi. Donec dignissim magna eget turpis laoreet fringilla. Pellentesque vitae efficitur elit. Quisque lacus diam, finibus eget ornare quis, dictum ac nunc. Praesent suscipit ac nulla sit amet pretium.

Vivamus gravida vestibulum consequat. Nulla viverra accumsan libero ut pulvinar. Donec eleifend porttitor erat, vel blandit risus vulputate eget. Duis cursus lacus nec dapibus imperdiet. Proin accumsan ligula at mollis egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus maximus eget tortor at lobortis. Etiam sed malesuada purus. Vivamus molestie, ex vitae laoreet suscipit, felis magna imperdiet metus, a dictum diam quam et augue. Maecenas velit tortor, sagittis vel est sed, ultricies aliquam turpis. Maecenas congue, lorem ut ornare pulvinar, metus dolor tempor ipsum, in vestibulum ante enim vel velit. Nullam porttitor ac ex vel cursus. Suspendisse vitae consectetur metus. Maecenas vestibulum augue vel magna scelerisque ullamcorper vitae vitae arcu.

Praesent cursus ex et turpis molestie, ut congue erat posuere. Proin eget erat eu lacus molestie auctor nec ut augue. Maecenas quis vehicula augue. Proin sollicitudin est ligula, et aliquam sem ornare sit amet. Pellentesque aliquam ipsum placerat nisl fermentum, non vestibulum leo pellentesque. Aenean feugiat urna in leo pharetra finibus. Sed quis arcu at nunc ultricies tincidunt quis in libero. In consequat ligula a fringilla finibus. Morbi massa libero, cursus ut ipsum a, pulvinar feugiat dolor. Ut a nisl quam. Pellentesque vel orci eu erat aliquam suscipit ac ut eros.

Nunc in posuere purus. Curabitur tempor purus ut molestie tristique. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec sit amet arcu elementum, iaculis turpis eu, efficitur ex. Nam quis enim finibus, consectetur augue non, consequat magna. Donec faucibus nunc ut blandit malesuada. In hac habitasse platea dictumst. Vestibulum rutrum est vel fermentum scelerisque. Proin tempus et justo et eleifend.

Ut eu maximus massa. Duis eget volutpat tellus. Sed egestas tempus efficitur. Etiam in iaculis tellus, quis sollicitudin metus. Duis sed est sed eros gravida mattis. Sed efficitur nulla interdum laoreet porttitor. Sed eu ligula nec enim lobortis laoreet sit amet sed metus. Suspendisse dictum elit sit amet ipsum pulvinar, vel consectetur purus congue. Nullam non congue purus, eget hendrerit eros. In placerat sodales velit. In interdum at augue id commodo. Aliquam nec erat maximus, euismod ante sed, congue elit. Donec aliquet rutrum ex quis accumsan.</string>
  <string name="summary">Summary:</string>
  <string name="ingredients">Ingredients:</string>
  <string name="instructions">Instructions:</string>
  <string name="home">Explore</string>
  <string name="favorites">Favorites</string>
  <string name="cart">Cart</string>
  <string name="meal_type_main_course">Main Course</string>
  <string name="meal_type_appetizer">Appetizer</string>
  <string name="meal_type_side_dish">Side dish</string>
  <string name="meal_type_dessert">Dessert</string>
  <string name="meal_type_salad">Salad</string>
  <string name="meal_type_bread">bread</string>
  <string name="meal_type_breakfast">Breakfast</string>
  <string name="meal_type_soup">Soup</string>
  <string name="meal_type_beverage">Beverage</string>
  <string name="meal_type_sauce">Sauce</string>
  <string name="meal_type_marinade">Marinade</string>
  <string name="meal_type_finger_food">Finger food</string>
  <string name="meal_type_snack">Snack</string>
  <string name="meal_type_drink">Drink</string>
  <string name="section_see_all">See all items for section</string>
  <string name="search_recipes">Search recipes</string>
  <string name="section_view_more">More</string>
  <string name="title_filter">Filter Search</string>
  <string name="title_camera">Image Search</string>
  <string name="add_to_favorite">Add to favorite</string>
  <string name="skip">Skip</string>
  <string name="onboarding_pager">Onboarding pager</string>
  <string name="onboarding_title_1">Welcome to \n Yum Byte</string>
  <string name="onboarding_sub_title_1">Say goodbye to same meals and discover inspiration for your recipes at comfort</string>
  <string name="onboarding_title_2">Plan meal, \nEat well</string>
  <string name="onboarding_sub_title_2">Plan your recipes for day and remind you for preparation</string>
  <string name="onboarding_title_3">Personal recipe collection</string>
  <string name="onboarding_sub_title_3">Your yummy treasures all in one place. Add recipes to favorite for easy access</string>
  <string name="get_started">Get started</string>
  <string name="recipe_image">Recipe image</string>
  <string name="detail_overview">Overview</string>
  <string name="detail_ingredients">Ingredients</string>
  <string name="detail_instructions">Instructions</string>
  <string name="detail_nutrition">Nutrition</string>
  <string name="favorite_recipes">Favorite Recipes</string>
  <string name="shopping_cart">Shopping cart</string>
  <string name="meal_planner">Meal planner</string>
  <string name="week_meal_planner">Week\'s meal plan</string>
  <string name="menu_collections">Collections</string>
  <string name="menu_settings">Settings</string>
  <string name="scheduled_and_made">Scheduled and made</string>
  <string name="search_favorites">Search favorites</string>
  <string name="search_recipe_suggestions">Recipes</string>
  <string name="search_recipe_recent_searches">Recent searches</string>
  <string name="search_suggestion_icon">Search suggestion icon</string>
  <string name="group_by_recipe">Recipe</string>
  <string name="group_by_aisle">Aisle</string>
  <string name="servings">Servings: %d</string>
  <string name="remove_ingredients_from_shopping_list">Remove ingredients from cart</string>
  <string name="add_ingredients_to_shopping_list">Add ingredients to cart</string>
  <string name="recipe_add_to_meal_plan">Add to Meal plan</string>
  <string name="recipe_remove_from_meal_plan">Remove from meal plan</string>
  <string name="today">Today</string>
  <string name="week">Week</string>
  <string name="unscheduled_recipes">Unscheduled recipes</string>
  <string name="schedule_meal_on">Schedule meal on</string>
  <string name="download_recipe">Download recipe</string>
  <string name="share_recipe">Share recipe</string>
  <string name="set_meal_schedule">Schedule Recipe</string>
  <string name="edit_schedule">Edit Schedule</string>
  <string name="repeat_again">Repeat again</string>
  <string name="set_time_subtitle">Set time for meal, and set reminder for when to begin preparation</string>
  <string name="done">Done</string>
  <string name="add_to_calendar">Add to calendar</string>
  <string name="prepare_at">Prepare at</string>
  <string name="serve_at">Serve at</string>
  <string name="no_data_image">No data image</string>
  <string name="today_empty_header">Are you fasting?</string>
  <string name="today_empty_body">Schedule meal for today to have a quick meal</string>
  <string name="unschedule_empty_header">No meals planned</string>
  <string name="unscheduled_empty_body">Add recipes to meal plan to schedule them</string>
  <string name="cart_empty_header">Nothing to shop</string>
  <string name="cart_empty_body">Add recipe ingredients to buy</string>
  <string name="notification_channel_meal_plan_title">Meal plan</string>
  <string name="notification_channel_meal_plan_summary">Notify when recipe for planned meals are scheduled</string>
  <string name="notification_meal_plan_title">Meal planned: %1$s</string>
  <string name="no_favorite_recipes">There are no favorite recipes added.</string>
  <string name="no_week_plan">There are no recipes planned for week.</string>
  <string name="explore">Explore</string>
  <string name="plan">Plan</string>
    <string name="settings_appearance">Appearance</string>
    <string name="preference_file_name">feast_settings_preferences</string>
  <string name="preference_ui">User Interface</string>
  <string name="preference_appearance_summary">Change theme, language and more</string>
  <string name="preference_notifications">Notifications</string>
  <string name="settings_meal_notify">@string/notification_channel_meal_plan_title</string>
  <string name="settings_meal_notify_summary">@string/notification_channel_meal_plan_summary</string>
  <string name="preference_backup_and_restore">Backup &amp; restore</string>
  <string name="settings_import">Import</string>
  <string name="settings_import_summary">Import your backup file to restore data on device</string>
  <string name="settings_export">Export</string>
  <string name="settings_export_summary">Export your data to create backup or transger to new device</string>
  <string name="preference_privacy">Privacy</string>
  <string name="settings_privacy_policy">View Privacy policy</string>
  <string name="settings_analytics">Report app usage</string>
  <string name="settings_analytics_summary">Send anonymous details about how you use app</string>
  <string name="settings_crash_report">Report app crashes</string>
  <string name="settings_crash_report_summary">Send anonymous reports about app crashes and other issues</string>
  <string name="preference_about">About</string>
  <string name="preference_miscellaneous">Miscellaneous</string>
  <string name="settings_misc">Report issue</string>
  <string name="settings_misc_summary">Send logs to resolve</string>
  <string name="settings_app_version">Version Info</string>
  <string name="settings_app_version_summary">Click to check for updates</string>
  <string name="settings_repository">Github repository</string>
  <string name="settings_repository_summary">View code</string>
  <string name="settings_data_credits">Data credits</string>
  <string name="settings_credits_summaru">Data in app is loaded from Spoonacular</string>
  <string name="preference_key_appearance">preference_appearance_screen</string>
  <string name="preference_key_import">preference_key_import</string>
  <string name="preference_key_export">preference_key_export</string>
  <string name="preference_key_privacy_policy">preference_key_privacy_policy</string>
  <string name="preference_key_analytics">preference_key_analytics</string>
  <string name="preference_key_crash_report">preference_key_crash_report</string>
  <string name="preference_key_misc">preference_key_misc</string>
  <string name="preference_key_app_version">preference_key_app_version</string>
  <string name="preference_key_repository">preference_key_repository</string>
  <string name="preference_key_meal_plan">preference_key_meal_plan</string>
    <string name="github_repo_url">https://github.com/AKMohite/Feastilious</string>
  <string name="spoonacular_url">https://spoonacular.com/food-api/docs</string>
  <string name="privacy_policy_url">https://github.com/AKMohite/Feastilious</string>
</resources>