<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/week_plan_container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:theme="@style/Theme.Material3.DynamicColors.DayNight">
  <ListView
    android:id="@+id/widget_week_plan_recipes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:paddingTop="@dimen/space_big"
    android:paddingBottom="@dimen/space_tiny"
    android:scrollbars="none"/>
  <FrameLayout
    android:id="@+id/widget_week_plan_recipes_empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/space_big">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:layout_margin="@dimen/space_big"
      android:orientation="vertical">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_tiny"
        android:text="@string/week_meal_planner"
        android:textAllCaps="true"
        style="?attr/textAppearanceTitleMedium"/>
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_week_plan"/>
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan"
        android:layout_marginTop="@dimen/space_small"
        style="?attr/materialButtonTonalStyle"/>
    </LinearLayout>
  </FrameLayout>
</FrameLayout>
