<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/fav_recipes_container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:theme="@style/Theme.Material3.DynamicColors.DayNight">
  <ListView
    android:id="@+id/widget_fav_recipes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:paddingTop="@dimen/space_big"
    android:paddingBottom="@dimen/space_tiny"
    android:scrollbars="none"/>
  <FrameLayout
    android:id="@+id/widget_fav_recipes_empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/space_big">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:layout_margin="@dimen/space_big"
      android:orientation="vertical">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_tiny"
        android:text="@string/favorite_recipes"
        android:textAllCaps="true"
        style="?attr/textAppearanceTitleMedium"/>
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_recipes"/>
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:layout_marginTop="@dimen/space_small"
        style="?attr/materialButtonTonalStyle"/>
    </LinearLayout>
    <ImageView
      android:layout_width="@dimen/icon_size"
      android:layout_height="@dimen/icon_size"
      android:layout_gravity="end|top"
      android:layout_marginTop="@dimen/space_micro"
      android:paddingStart="@dimen/space_medium"
      android:paddingEnd="0dp"
      android:paddingHorizontal="@dimen/space_tiny"
      android:src="@drawable/ic_refresh"/>
  </FrameLayout>
</FrameLayout>
