<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mealplanner.schedule.ScheduleMealFragment">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:padding="@dimen/space_normal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_meal_schedule"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:layout_marginTop="@dimen/space_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time_subtitle"
            android:layout_marginTop="@dimen/space_small"
            android:textAppearance="?attr/textAppearanceBodyLarge"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/space_tiny"
            android:layout_marginTop="@dimen/space_big">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">

                <include
                    android:id="@+id/meal_plan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    layout="@layout/component_meal_plan_recipe"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/schedule_date_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="14 January 2025"
                    android:layout_marginTop="@dimen/space_small"
                    app:layout_constraintTop_toBottomOf="@id/meal_plan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="?attr/materialButtonOutlinedStyle"/>

                <TextView
                    android:id="@+id/prepare_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prepare_at"
                    android:layout_marginTop="@dimen/space_tiny"
                    app:layout_constraintStart_toStartOf="@id/preparation_time_btn"
                    app:layout_constraintEnd_toEndOf="@id/preparation_time_btn"
                    app:layout_constraintTop_toBottomOf="@id/schedule_date_btn"
                    android:textAppearance="?attr/textAppearanceBodySmall"/>

                <TextView
                    android:id="@+id/serve_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serve_at"
                    android:layout_marginTop="@dimen/space_tiny"
                    app:layout_constraintEnd_toEndOf="@id/serving_time_btn"
                    app:layout_constraintStart_toStartOf="@id/serving_time_btn"
                    app:layout_constraintTop_toBottomOf="@id/schedule_date_btn"
                    android:textAppearance="?attr/textAppearanceBodySmall"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/preparation_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12:00"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_marginTop="@dimen/space_micro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/prepare_tv"
                    android:layout_below="@id/prepare_tv"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_time_required"
                    app:layout_constraintStart_toEndOf="@id/prepare_tv"
                    app:layout_constraintEnd_toStartOf="@id/serve_tv"
                    app:layout_constraintTop_toTopOf="@id/prepare_tv"
                    app:layout_constraintBottom_toBottomOf="@id/preparation_time_btn"
                    android:contentDescription="@string/set_meal_schedule"
                    android:layout_below="@id/schedule_date_btn"
                    android:layout_toEndOf="@id/preparation_time_btn"
                    android:layout_toStartOf="@id/serving_time_btn"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/serving_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="13:00"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_marginTop="@dimen/space_micro"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/serve_tv"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/add_to_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_calendar"
            tools:checked="true"
            android:layout_marginTop="@dimen/space_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"/>
    </LinearLayout>

</FrameLayout>