<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.collection.CollectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_collections"
            android:textAppearance="?attr/textAppearanceDisplaySmall"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginHorizontal="@dimen/space_small"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/collection_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_tiny">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">
                <ImageView
                    android:layout_width="@dimen/space_huge"
                    android:layout_height="@dimen/space_huge"
                    android:src="@drawable/ic_favorite_menu"
                    app:tint="?attr/colorTertiary"
                    android:contentDescription="@string/favorite_recipes"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_recipes"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/space_micro"
                    android:textAppearance="?attr/textAppearanceTitleMedium"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/collection_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_tiny">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">
                <ImageView
                    android:layout_width="@dimen/space_huge"
                    android:layout_height="@dimen/space_huge"
                    android:src="@drawable/ic_cart_menu"
                    app:tint="?attr/colorTertiary"
                    android:contentDescription="@string/shopping_cart"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/space_micro"
                    android:textAppearance="?attr/textAppearanceTitleMedium"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/collection_meal_planner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_tiny">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">
                <ImageView
                    android:layout_width="@dimen/space_huge"
                    android:layout_height="@dimen/space_huge"
                    android:src="@drawable/ic_calendar"
                    app:tint="?attr/colorTertiary"
                    android:contentDescription="@string/meal_planner"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_planner"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/space_micro"
                    android:textAppearance="?attr/textAppearanceTitleMedium"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/collection_meal_scheduled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_tiny">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_small">
                <ImageView
                    android:layout_width="@dimen/space_huge"
                    android:layout_height="@dimen/space_huge"
                    android:src="@drawable/ic_done_check"
                    app:tint="?attr/colorTertiary"
                    android:contentDescription="@string/scheduled_and_made"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduled_and_made"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/space_micro"
                    android:textAppearance="?attr/textAppearanceTitleMedium"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>